--- a/sstyle.css
+++ b/sstyle.css
@@ -36,7 +36,7 @@ a:hover {
    Header
 ========================= */
 header {
-    background: linear-gradient(135deg, #00d2ff, #3a7bd5);
+    background: linear-gradient(135deg, #00d2ff, #293856);
     color: white;
     padding: 25px 0;
     box-shadow: 0 4px 10px rgba(0,0,0,0.3);
@@ -281,5 +281,6 @@ footer {
         font-size: 2rem;
     }
 }
+
 
 
