--- a/sstyle.css
+++ b/sstyle.css
@@ -188,7 +188,7 @@ header {
 ========================= */
 .featured-blogs {
     padding: 100px 0;
-    background-color: #111;
+    background-color: #39414d;
 }
 
 .featured-blogs h2 {
@@ -280,6 +280,7 @@ footer {
         font-size: 2rem;
     }
 }
+
 
 
 
