--- a/blogs.css
+++ b/blogs.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #343a40;
+  background-color: ##202a33;
   color: #eee;
   line-height: 1.6;
 }
@@ -122,7 +122,7 @@ header {
 }
 
 .blog-box {
-  background-color: #1f1f1f;
+  background-color: #c2d3e4;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 8px 20px rgba(0,0,0,0.5);
@@ -227,3 +227,4 @@ footer {
     gap: 12px;
   }
 }
+
