--- a/blogs.css
+++ b/blogs.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: ##202a33;
+  background-color: #202a33;
   color: #eee;
   line-height: 1.6;
 }
@@ -227,4 +227,5 @@ footer {
     gap: 12px;
   }
 }
+
 
