--- a/blogs.css
+++ b/blogs.css
@@ -108,7 +108,7 @@ header {
 
 .blog-container h2 {
   text-align: center;
-  color: #202a33;
+  color: #0a66c2;
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 60px;
@@ -227,6 +227,7 @@ footer {
     gap: 12px;
   }
 }
+
 
 
 
