--- a/blogs.css
+++ b/blogs.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #202a33;
+  background-color: #e8f3ff;
   color: #eee;
   line-height: 1.6;
 }
@@ -227,6 +227,7 @@ footer {
     gap: 12px;
   }
 }
+
 
 
 
