--- a/sstyle.css
+++ b/sstyle.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #343a40;
+    background-color: #FFFFFF;
     color: #eee;
     line-height: 1.6;
 }
@@ -280,6 +280,7 @@ footer {
         font-size: 2rem;
     }
 }
+
 
 
 
