--- a/sstyle.css
+++ b/sstyle.css
@@ -58,7 +58,7 @@ header {
   font-size: 1.8rem;
   font-weight: 900;
   letter-spacing: 1px;
-  color: #fff;
+  color: #000000;
   text-decoration: none;
   font-family: 'DM Serif Display', serif; /* elegant, premium font */
 }
@@ -75,7 +75,7 @@ header {
 }
 
 .menu li a {
-    color: #fff;
+    color: #000000;
     font-weight: 500;
     padding: 8px 12px;
     border-radius: 5px;
@@ -92,7 +92,7 @@ header {
     background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
                 url('https://images.unsplash.com/photo-1581091012184-2f8c31f3f1c0') 
                 center/cover no-repeat;
-    color: #fff;
+    color: #000000;
     text-align: center;
     padding: 150px 20px 100px;
 }
@@ -108,11 +108,11 @@ header {
     max-width: 750px;
     margin: 0 auto 35px;
     line-height: 1.8;
-    color: #ddd;
+    color: #000000;
 }
 
 .btn {
-    background-color: #1abc9c;
+    background-color: #f5462f;
     color: #fff;
     padding: 15px 30px;
     border-radius: 50px;
@@ -124,7 +124,7 @@ header {
 }
 
 .btn:hover {
-    background-color: #16a085;
+    background-color: #f0533e;
     transform: translateY(-3px);
 }
 
@@ -140,7 +140,7 @@ header {
     margin-bottom: 20px;
     text-align: center;
     font-weight: 700;
-    color: #1abc9c;
+    color: #0a0a0a;
 }
 
 .feature-business p {
@@ -156,7 +156,7 @@ header {
 #feature-business h3 {
     margin: 40px 0 25px;
     text-align: center;
-    color: #fff;
+    color: #0a0a0a;
     font-size: 1.6rem;
     font-weight: 600;
 }
@@ -195,7 +195,7 @@ header {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 50px;
-    color: #1abc9c;
+    color: #0a0a0a;
 }
 
 .blogs-grid {
@@ -205,7 +205,7 @@ header {
 }
 
 .blog {
-    background-color: #1f1f1f;
+    background-color: #FFFFFF;
     padding: 25px;
     border-radius: 12px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.5);
@@ -219,7 +219,7 @@ header {
 
 .blog h3 {
     margin-bottom: 20px;
-    color: #fff;
+    color: #0a0a0a;
 }
 
 .blog p {
@@ -237,11 +237,11 @@ header {
 .contact h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #1abc9c;
+    color: #0a0a0a;
 }
 
 .contact a {
-    color: #1abc9c;
+    color: #0a0a0a;
     font-weight: 600;
 }
 
@@ -280,6 +280,7 @@ footer {
         font-size: 2rem;
     }
 }
+
 
 
 
