--- a/sstyle.css
+++ b/sstyle.css
@@ -10,7 +10,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #FFFFFF;
-    color: #eee;
+    color: #000000;
     line-height: 1.6;
 }
 
@@ -280,6 +280,7 @@ footer {
         font-size: 2rem;
     }
 }
+
 
 
 
