--- a/blogpost.css
+++ b/blogpost.css
@@ -76,7 +76,7 @@ header {
 
 .logo img {
   height: 45px;
-  width: 500px;
+  width: auto;
   display: block;
 }
 
@@ -333,6 +333,7 @@ blockquote {
     gap: 10px;
   }
 }
+
 
 
 
