--- a/blogpost.css
+++ b/blogpost.css
@@ -78,6 +78,7 @@ header {
   height: 45px;
   width: 500px;
   display: block;
+  margin-left: -20px; /* adjust value as needed */
 }
 
 /* Menu links use Poppins */
@@ -333,6 +334,7 @@ blockquote {
     gap: 10px;
   }
 }
+
 
 
 
