--- a/blogs.css
+++ b/blogs.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #e8f3ff;
+  background-color: ##FFFFFF;
   color: #eee;
   line-height: 1.6;
 }
@@ -108,7 +108,7 @@ header {
 
 .blog-container h2 {
   text-align: center;
-  color: #0a66c2;
+  color: #000000;
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 60px;
@@ -227,6 +227,7 @@ footer {
     gap: 12px;
   }
 }
+
 
 
 
